templates/shortlink-api-http_template.yaml
---
# Source: shortlink-api-http/templates/base.yaml
apiVersion: v1
kind: Service
metadata:  
    name: release-name-shortlink-api-http
    labels:
      app.kubernetes.io/name: shortlink-api-http
      helm.sh/chart: shortlink-api-http-0.13.1
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/version: "1.0.0"
      app.kubernetes.io/part-of: shortlink
      track: stable
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 7070
      targetPort: http
      protocol: TCP
      # https://gateway-api.sigs.k8s.io/guides/backend-protocol/
      appProtocol: 
  selector:    
    app.kubernetes.io/name: shortlink-api-http
    app.kubernetes.io/instance: release-name
---
# Source: shortlink-api-http/templates/base.yaml
---
apiVersion: v1
kind: Service
metadata:  
    name: release-name-shortlink-api-http-preview
    labels:
      app.kubernetes.io/name: shortlink-api-http
      helm.sh/chart: shortlink-api-http-0.13.1
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/version: "1.0.0"
      app.kubernetes.io/part-of: shortlink
      track: stable
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 7070
      targetPort: http
      protocol: TCP
      # https://gateway-api.sigs.k8s.io/guides/backend-protocol/
      appProtocol: 
  selector:    
    app.kubernetes.io/name: shortlink-api-http
    app.kubernetes.io/instance: release-name
---
# Source: shortlink-api-http/templates/base.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-shortlink-api-http
  labels:
    app.kubernetes.io/name: shortlink-api-http
    helm.sh/chart: shortlink-api-http-0.13.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/part-of: shortlink
    track: stable
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-production
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: shortlink-api-http
                port:
                  number: 7070
      host: shortlink.best
---
# Source: shortlink-api-http/templates/base.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: release-name-shortlink-api-http
  labels:
    app.kubernetes.io/name: shortlink-api-http
    helm.sh/chart: shortlink-api-http-0.13.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/part-of: shortlink
    track: stable
  annotations:
    null
spec:
  replicas: 3
  revisionHistoryLimit: 5
  strategy:
    canary:
      stableService: release-name-shortlink-api-http
      canaryService: release-name-shortlink-api-http-preview
      # The minimum number of pods that will be requested for each ReplicaSet
      # when using traffic routed canary. This is to ensure high availability
      # of each ReplicaSet.
      minPodsPerReplicaSet: 1
      dynamicStableScale: true
      trafficRouting:
        nginx:
          # Reference to an Ingress which has a rule pointing to the stable service (e.g. rollouts-demo-stable)
          # This ingress will be cloned with a new name, in order to achieve NGINX traffic splitting.
          stableIngress: release-name-shortlink-api-http
      steps:
      - setWeight: 30
      - pause:
          duration: 10
      - setWeight: 60
      - pause:
          duration: 10
      - setWeight: 100
      - pause:
          duration: 10
  selector:
    matchLabels:      
      app.kubernetes.io/name: shortlink-api-http
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: shortlink-api-http
        helm.sh/chart: shortlink-api-http-0.13.1
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/part-of: shortlink
        track: stable
    spec:
      terminationGracePeriodSeconds: 60
      automountServiceAccountToken: true
      serviceAccountName: release-name-shortlink-api-http
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:      
      - name: application
        # -- Security Context policies for controller pods
        # See https://kubernetes.io/docs/tasks/administer-cluster/sysctl-cluster/ for
        # notes on enabling and using sysctls
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          # runAsUser is the user ID used to run the container
          runAsUser: 1000
          # runAsGroup is the primary group ID used to run all processes within any container of the pod
          runAsGroup: 1000
          # readOnlyRootFilesystem is a flag to enable readOnlyRootFilesystem for the Hazelcast security context
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        image: "registry.gitlab.com/shortlink-org/shortlink/api-http:0.16.121"
        # -- Global imagePullPolicy
        # Default: 'Always' if image tag is 'latest', else 'IfNotPresent'
        # Ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 7070
            protocol: TCP
          - name: metrics
            containerPort: 9090
            protocol: TCP
        # -- define a liveness probe that checks every 5 seconds, starting after 5 seconds
        livenessProbe:
          httpGet:
            path: /live
            port: 9090
          initialDelaySeconds: 5
          periodSeconds: 5
          terminationGracePeriodSeconds: 5
          successThreshold: 1
          failureThreshold: 5
          timeoutSeconds: 5
        # -- define a readiness probe that checks every 5 seconds, starting after 5 seconds
        readinessProbe:
          httpGet:
            path: /ready
            port: 9090
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 30
          timeoutSeconds: 5
        resources:
          # -- We usually recommend not specifying default resources and to leave this as a conscious
          # choice for the user. This also increases chances charts run on environments with little
          # resources, such as Minikube. If you do want to specify resources, uncomment the following
          # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 15m
            memory: 64Mi
        
      # -- Node labels and tolerations for pod assignment
      # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
      # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#taints-and-tolerations-beta-feature
